--- a/VendorAndOrderTracker.Tests/VenderAndOrderTracker.Tests.csproj
+++ b/VendorAndOrderTracker.Tests/VenderAndOrderTracker.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDoList\ToDoList.csproj" />  
+    <ProjectReference Include="../VendorAndOrderTracker\VenderAndOrderTracker.csproj" />  
   </ItemGroup>
 
 </Project>
